--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,34 @@
 asgiref==3.5.2
-brotlipy==0.7.0
-certifi==2021.10.8
-cffi @ file:///opt/conda/conda-bld/cffi_1642701102775/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-conda==4.12.0
-conda-content-trust @ file:///tmp/build/80754af9/conda-content-trust_1617045594566/work
-conda-package-handling @ file:///tmp/build/80754af9/conda-package-handling_1649105784853/work
-cryptography @ file:///tmp/build/80754af9/cryptography_1639414572950/work
-distlib==0.3.6
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+cryptography==38.0.1
+defusedxml==0.7.1
 dj-database-url==1.0.0
 Django==4.1.2
+django-allauth==0.51.0
+django-filter==22.1
 django-heroku==0.3.1
-filelock==3.8.0
+django-rest-auth==0.9.5
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 gunicorn==20.1.0
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-platformdirs==2.5.2
+idna==3.4
+importlib-metadata==5.0.0
+Markdown==3.4.1
+oauthlib==3.2.2
+Pillow==9.2.0
 psycopg2==2.9.4
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-PySocks @ file:///tmp/build/80754af9/pysocks_1605305812635/work
-requests @ file:///opt/conda/conda-bld/requests_1641824580448/work
-ruamel-yaml-conda @ file:///tmp/build/80754af9/ruamel_yaml_1616016711199/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+pycparser==2.21
+PyJWT==2.5.0
+python-decouple==3.6
+python3-openid==3.2.0
+pytz==2022.5
+requests==2.28.1
+requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.3
-tqdm @ file:///opt/conda/conda-bld/tqdm_1647339053476/work
-urllib3 @ file:///opt/conda/conda-bld/urllib3_1643638302206/work
-virtualenv==20.16.5
+types-cryptography==3.3.23.1
+urllib3==1.26.12
 whitenoise==6.2.0
+zipp==3.9.0
